fix: link wrap to anywhere

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ main {
 a {
   color: #fff;
   cursor: pointer;
+  overflow-wrap: anywhere;
 }
 
 /* these items don't use body font if not explicit inherit */
@@ -128,8 +129,8 @@ button.big {
 }
 
 .popup {
-  font-size: 3vmin;
-  line-height: 3vmin;
+  /* font-size: 3vmin; */
+  /* line-height: 3vmin; */
   width: 3vmin;
   text-align: center;
   color: #fff;
@@ -138,7 +139,7 @@ button.big {
 
 /* The actual popup (appears on top) */
 .popup .popuptext {
-  font-size: 1.6em;
+  /* font-size: 1.6em; */
   overflow-y: scroll;
   visibility: hidden;
   text-align: left;
